--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    <header>
+
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-titel">Ma<span class="r">r</span>y</h3>
+            <ul>
+                <li><a class="dark2" href="">Portfolio</a></li>
+                <li><a  class="dark2" href="">Blogs</a></li>
+                <li><a href=""><button class="btn-design">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner-main">
+            <div class="banner-text">
+                <h4 class="banner-greetings dark2">Hi, I  am</h4>
+                <h1 class="banner-titel">Mary Hardy</h1>
+                <p class="ban-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-design">Download CV</button>
+                <button class="btn-design">Contact</button>
+            </div>
+            <img class="banner-img" src="images/hardy.png" alt="">
+        </div>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
